сделал чтение из бд

--- a/PlaceChecklist/Views/PlaceChecklist/Index.cshtml
+++ b/PlaceChecklist/Views/PlaceChecklist/Index.cshtml
@@ -16,7 +16,11 @@
             {
                 <div class="table-of-shares">
 
-                    <div>@establishment.Name</div>
+                    <div>Название: @establishment.Name</div>
+                    <div>Адрес: @establishment.Address</div>
+                    <div>Категория: @establishment.Category</div>
+                    <div>Тег: @establishment.Tags</div>
+                    <div>Описание: @establishment.Description</div>
                 </div>
             }
         </div>
