--- a/PlaceChecklist/Views/Shared/_Layout.cshtml
+++ b/PlaceChecklist/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
+@RenderSection("Style", false)
+@RenderSection("Script", false)
 <main>
     @RenderBody()
 </main>
