добавил crud почти везде и дропдауны на страничке с добавлением мест

--- a/PlaceChecklist/Views/Shared/_Layout.cshtml
+++ b/PlaceChecklist/Views/Shared/_Layout.cshtml
@@ -3,6 +3,10 @@
 @RenderSection("Style", false)
 @RenderSection("Script", false)
 <main>
+    <a href="/PlaceChecklist/Index">Список мест</a>
+    <a href="/PlaceChecklist/AddEstablishment">Добавить место</a>
+    <a href="/PlaceChecklist/AddTag">Добавить тег</a>
+    <a href="/PlaceChecklist/AddCategory">Добавить категорию</a>
     @RenderBody()
 </main>
 
